name:     christmas-tree
version:  0.1.0
synopsis: Controls the lights in the Christmas tree
homepage: https://github.com/ruuda/christmas-tree

license:    GPL3
author:     Ruud van Asseldonk
maintainer: dev@veniogames.com
copyright:  2016 Ruud van Asseldonk

build-type:    Simple
cabal-version: >=1.10

executable christmas-tree
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
