name:     christmas-tree
version:  0.1.0
synopsis: Controls the lights in the Christmas tree
homepage: https://github.com/ruuda/christmas-tree

license:    GPL-3
author:     Ruud van Asseldonk
maintainer: dev@veniogames.com
copyright:  2016 Ruud van Asseldonk

build-type:    Simple
cabal-version: >=1.10

executable christmas-tree
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options: -O2

  build-depends: base       >= 4.9  && < 4.10
               , bytestring >= 0.10 && < 0.11
               , serialport >= 0.4  && < 0.5
               , time       >= 1.6  && < 1.7

executable ct-server
  hs-source-dirs:   src
  main-is:          Server.hs
  other-modules:    Protocol
  default-language: Haskell2010

  build-depends: base       >= 4.9  && < 4.10
               , bytestring >= 0.10 && < 0.11
               , network    >= 2.6  && < 2.7
               , unix       >= 2.7  && < 2.8
               , scotty     >= 0.11 && < 0.12
               , securemem  >= 0.1  && < 0.2
               , wai-extra  >= 3.0  && < 3.1
               , warp       >= 3.2  && < 3.3
               , warp-tls   >= 3.2  && < 3.3
